<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="@bool/default_force_tablet_layout"
        android:key="@string/pref_key_force_tablet_layout"
        android:summary="@string/settings_force_tablet_layout_text"
        android:title="@string/settings_force_tablet_layout_title" />

    <CheckBoxPreference
        android:defaultValue="@bool/default_use_true_randomisation"
        android:key="@string/pref_key_use_true_randomisation"
        android:summary="@string/settings_use_true_randomisation_text"
        android:title="@string/settings_use_true_randomisation_title" />

    <de.tobiasbielefeld.solitaire.dialogs.DialogPreferenceMaxNumberUndos
        android:key="@string/pref_key_max_number_undos"
        android:title="@string/settings_max_number_undos"
        android:negativeButtonText="@string/game_cancel"
        android:positiveButtonText="@string/game_confirm"
        android:summary=""/>

</PreferenceScreen>
