<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/idgroup1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_startpage"
            android:title="@string/manual_startpage" />
        <item
            android:id="@+id/nav_menu"
            android:title="@string/manual_main_menu" />
        <item
            android:id="@+id/nav_user_interface"
            android:title="@string/manual_ui" />
        <item
            android:id="@+id/nav_games"
            android:title="@string/manual_games" />
        <item
            android:id="@+id/nav_statistics"
            android:title="@string/title_activity_statistics" />
        <item
            android:id="@+id/nav_feedback"
            android:title="@string/manual_feedback" />
    </group>
    <group android:id="@+id/idgroup2" >
        <item
            android:id="@+id/nav_back_to_game"
            android:title="@string/manual_back_to_game" />
    </group>

</menu>
