<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/icon_manual"
            android:id="@+id/item_manual"
            android:title="@string/title_activity_manual" />

        <item
            android:icon="@drawable/icon_settings"
            android:id="@+id/item_settings"
            android:title="@string/settings" />


        <item
            android:icon="@drawable/icon_about"
            android:id="@+id/item_about"
            android:title="@string/about_name" />

        <item
            android:icon="@drawable/icon_close"
            android:id="@+id/item_close"
            android:title="@string/game_close" />
    </group>


</menu>
